# asavari

./: bonus_asavari.ipynb  decision_tree_asavari.ipynb  logregg_asavari.ipynb  lrffasavari.ipynb  neuralnetworks_asavari (1).ipynb  neuralnetworks_asavari.ipynb  opencv_task6.ipynb
Task 2/: Bonus_Task.ipynb  Linear_Regression.ipynb  juniors_qualityrating_asavari.csv
Task 3/: Clustering.ipynb  Decison_Trees.ipynb  Ensemble_Methods.ipynb
Task 4/: Neural_Networks.ipynb
Task 8/: CNN.ipynb
Task 9/autonav_cpp/: CMakeLists.txt  package.xml
Task 9/autonav_cpp/include/autonav_cpp/: cubic_spline.hpp
Task 9/autonav_cpp/launch/: autonav_launch.py
Task 9/autonav_cpp/src/: astar_planner_node.cpp  path_follower_node.cpp
Task 9/hydrant_finder/: CMakeLists.txt  package.xml
Task 9/hydrant_finder/include/hydrant_finder/: hydrant_finder_node.hpp
Task 9/hydrant_finder/launch/: hydrant_finder.launch.py
Task 9/hydrant_finder/src/: hydrant_finder_node.cpp
